Fix broken layout of bulk buy

--- a/app/assets/stylesheets/darkswarm/_shop-inputs.scss
+++ b/app/assets/stylesheets/darkswarm/_shop-inputs.scss
@@ -97,7 +97,7 @@ button.bulk-buy.variant-quantity {
 }
 
 button.bulk-buy-add.variant-quantity {
-  width: 2.5rem;
+  width: 2.4rem;
 }
 
 [type="number"].variant-quantity {
